--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,13 +1,15 @@
-.footer__link {
+.footer__copyright {
+  margin: 0;
   display: inline-block;
   text-decoration: none;
   color: var(--grey-color);
   font-weight: 400;
   font-size: 18px;
   line-height: 22px;
-  transition: transform 0.4s ease;
 }
 
-.footer__link:hover {
-  transform: translateX(10px);
+@media screen and (max-width: 400px) {
+  .footer__copyright {
+    font-size: 14px;
+  }
 }
