--- a/blocks/gallery/__image/gallery__image.css
+++ b/blocks/gallery/__image/gallery__image.css
@@ -1,6 +1,6 @@
 .gallery__image {
-  max-width: 100%;
-  height: 100%;
+  width: 282px;
+  height: 282px;
   object-fit: cover;
   object-position: center;
   vertical-align: top;
