--- a/blocks/gallery/__list/gallery__list.css
+++ b/blocks/gallery/__list/gallery__list.css
@@ -4,7 +4,8 @@
   padding: 0;
 
   display: grid;
-  gap: 17px;
+  column-gap: 18px;
+  row-gap: 21px;
   grid-template-columns: repeat(3, 282px);
 }
 
