--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,7 @@
 .header {
   padding-top: 45px;
   padding-bottom: 35px;
-  border-bottom: 1px solid var(--grey-color);
+  border-bottom: 1px solid rgba(84, 84, 84, 0.7);
 }
 
 @media screen and (max-width: 400px) {
