--- a/blocks/popup/__form/popup__form.css
+++ b/blocks/popup/__form/popup__form.css
@@ -1,13 +1,13 @@
 .popup__form {
-  background-color: var(--white-color);
+  /*   background-color: var(--white-color);
   border-radius: 10px;
-  padding: 36px;
+  padding: 36px; */
   display: flex;
   flex-direction: column;
 }
 
-@media screen and (max-width: 480px) {
+/* @media screen and (max-width: 480px) {
   .popup__form {
     padding: 25px 22px;
   }
-}
+} */
