--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,8 +1,11 @@
 .popup {
-  padding: 0 15px;
+  padding: 0 20px;
   z-index: 9999;
   position: fixed;
-  inset: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   background-color: rgba(0, 0, 0, 0.8);
 
   display: none;
