--- a/blocks/profile/__job/profile__job.css
+++ b/blocks/profile/__job/profile__job.css
@@ -5,6 +5,11 @@
   font-weight: 400;
   font-size: 18px;
   line-height: 1.2;
+  max-width: 300px;
+
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
 
 @media screen and (max-width: 560px) {
