--- a/blocks/profile/__button-add/profile__button-add.css
+++ b/blocks/profile/__button-add/profile__button-add.css
@@ -1,29 +1,34 @@
-.profile__button_type_add {
+.profile__button-add {
+  border: none;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+
   width: 150px;
   height: 50px;
   border: 2px solid #ffffff;
   border-radius: 2px;
 
-  background-image: url('../../../../images/svg/btn-add.svg');
+  background-image: url('../../../images/svg/btn-add.svg');
   background-size: 22px 22px;
   background-position: center;
   background-repeat: no-repeat;
 }
 
 @media screen and (max-width: 680px) {
-  .profile__button_type_add {
+  .profile__button-add {
     width: 50px;
   }
 }
 
 @media screen and (max-width: 560px) {
-  .profile__button_type_add {
+  .profile__button-add {
     width: 80%;
   }
 }
 
 @media screen and (max-width: 400px) {
-  .profile__button_type_add {
+  .profile__button-add {
     width: 100%;
     background-size: 16px 16px;
   }
