--- a/blocks/profile/__button-edit/profile__button-edit.css
+++ b/blocks/profile/__button-edit/profile__button-edit.css
@@ -1,4 +1,9 @@
-.profile__button_type_edit {
+.profile__button-edit {
+  border: none;
+  padding: 0;
+  background-color: transparent;
+  cursor: pointer;
+
   position: absolute;
   right: 0;
   top: 15px;
@@ -7,20 +12,20 @@
   height: 24px;
   border: 1px solid var(--white-color);
 
-  background-image: url('../../../../images/svg/btn-edit.svg');
+  background-image: url('../../../images/svg/btn-edit.svg');
   background-size: 10px 10px;
   background-position: center;
   background-repeat: no-repeat;
 }
 
 @media screen and (max-width: 560px) {
-  .profile__button_type_edit {
+  .profile__button-edit {
     top: 5px;
   }
 }
 
 @media screen and (max-width: 400px) {
-  .profile__button_type_edit {
+  .profile__button-edit {
     top: 6px;
     right: -10px;
     width: 18px;
