feat: реализовать попапы и карточки

--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -7,7 +7,11 @@
   height: 100%;
   background-color: rgba(0, 0, 0, 0.8);
 
-  display: none;
+  display: flex;
   align-items: center;
   justify-content: center;
+
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0.3s, opacity 0.3s linear;
 }
