--- a/pages/index.css
+++ b/pages/index.css
@@ -25,6 +25,7 @@
 @import url('../blocks/gallery/__list/gallery__list.css');
 @import url('../blocks/gallery/__item/gallery__item.css');
 @import url('../blocks/gallery/__content/gallery__content.css');
+@import url('../blocks/gallery/__trash/gallery__trash.css');
 @import url('../blocks/gallery/__image/gallery__image.css');
 @import url('../blocks/gallery/__info/gallery__info.css');
 @import url('../blocks/gallery/__name/gallery__name.css');
@@ -42,3 +43,7 @@
 @import url('../blocks/popup/__title/popup__title.css');
 @import url('../blocks/popup/__input/popup__input.css');
 @import url('../blocks/popup/__submit/popup__submit.css');
+
+@import url('../blocks/popup/__figure/popup__figure.css');
+@import url('../blocks/popup/__img/popup__img.css');
+@import url('../blocks/popup/__caption/popup__caption.css');
