--- a/blocks/gallery/__image/gallery__image.css
+++ b/blocks/gallery/__image/gallery__image.css
@@ -1,6 +1,7 @@
 .gallery__image {
-  width: 282px;
-  height: 282px;
+  max-width: 100%;
+  height: 100%;
+  aspect-ratio: 1 / 1;
   object-fit: cover;
   object-position: center;
   vertical-align: top;
