refactor: изменить названия функций и оверлэй попапа

--- a/pages/index.css
+++ b/pages/index.css
@@ -47,3 +47,4 @@
 @import url('../blocks/popup/__figure/popup__figure.css');
 @import url('../blocks/popup/__img/popup__img.css');
 @import url('../blocks/popup/__caption/popup__caption.css');
+@import url('../blocks/popup/_picture/popup_picture.css');
