feat: добавить валидацию для инпутов

--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -14,7 +14,8 @@
   color: var(--black-color);
 }
 .popup__input:focus {
-  outline-color: #5bc25d;
+  outline: none;
+  background-color: beige;
 }
 
 .popup__input:nth-of-type(1) {
