--- a/pages/index.css
+++ b/pages/index.css
@@ -48,3 +48,20 @@
 @import url('../blocks/popup/__img/popup__img.css');
 @import url('../blocks/popup/__caption/popup__caption.css');
 @import url('../blocks/popup/_picture/popup_picture.css');
+
+.form__input_type_error {
+  border-bottom: 1px solid #ff0000;
+}
+
+.popup__input-error {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 15px;
+  color: #ff0000;
+  visibility: hidden;
+  opacity: 0;
+}
+.popup__input-error_active {
+  visibility: visible;
+  opacity: 1;
+}
