feat: добавить disable для кнопки submit

--- a/blocks/popup/__submit/popup__submit.css
+++ b/blocks/popup/__submit/popup__submit.css
@@ -5,6 +5,7 @@
   background-color: var(--black-color);
   color: var(--white-color);
   padding: 15px;
+  margin-top: 16px;
 
   font-weight: 400;
   font-size: 18px;
