--- a/pages/index.css
+++ b/pages/index.css
@@ -42,26 +42,13 @@
 @import url('../blocks/popup/__form/popup__form.css');
 @import url('../blocks/popup/__title/popup__title.css');
 @import url('../blocks/popup/__input/popup__input.css');
+@import url('../blocks/popup/__input/_type/popup__input_type_error.css');
+@import url('../blocks/popup/__error/popup__error.css');
+@import url('../blocks/popup/__error/_visible/popup__error_visible.css');
 @import url('../blocks/popup/__submit/popup__submit.css');
+@import url('../blocks/popup/__submit/_disabled/popup__submit_disabled.css');
 
 @import url('../blocks/popup/__figure/popup__figure.css');
 @import url('../blocks/popup/__img/popup__img.css');
 @import url('../blocks/popup/__caption/popup__caption.css');
 @import url('../blocks/popup/_picture/popup_picture.css');
-
-.form__input_type_error {
-  border-bottom: 1px solid #ff0000;
-}
-
-.popup__input-error {
-  font-weight: 400;
-  font-size: 12px;
-  line-height: 15px;
-  color: #ff0000;
-  visibility: hidden;
-  opacity: 0;
-}
-.popup__input-error_active {
-  visibility: visible;
-  opacity: 1;
-}
