--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -52,3 +52,16 @@
 @import url('../blocks/popup/__img/popup__img.css');
 @import url('../blocks/popup/__caption/popup__caption.css');
 @import url('../blocks/popup/_picture/popup_picture.css');
+
+.gallery__button {
+  text-align: center;
+}
+.gallery__counter {
+  margin: 0;
+  padding: 0;
+  font-weight: 400;
+  font-size: 13px;
+  line-height: 16px;
+  color: var(--black-color);
+  display: block;
+}
