--- a/src/blocks/profile/__img/profile__img.css
+++ b/src/blocks/profile/__img/profile__img.css
@@ -1,12 +1,7 @@
 .profile__img {
-  max-width: 100%;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
   object-position: center;
-
-  flex-shrink: 0;
-  display: block;
-  height: 120px;
-  width: 120px;
-  border-radius: 50%;
-  overflow: hidden;
+  vertical-align: top;
 }
