--- a/main.css
+++ b/main.css
@@ -9,7 +9,7 @@
 .hover{transition:opacity .3s ease}.hover:hover{opacity:.7}
 .profile{align-items:center;display:flex;justify-content:space-between;padding-top:40px}@media screen and (max-width:560px){.profile{flex-direction:column;gap:32px}}@media screen and (max-width:400px){.profile{padding-left:20px;padding-right:20px}}
 .profile__info{align-items:center;display:flex}@media screen and (max-width:560px){.profile__info{flex-direction:column;gap:26px}}
-.profile__img{border-radius:50%;display:block;flex-shrink:0;height:120px;max-width:100%;-o-object-fit:cover;object-fit:cover;-o-object-position:center;object-position:center;overflow:hidden;width:120px}
+.profile__img{height:100%;-o-object-fit:cover;object-fit:cover;-o-object-position:center;object-position:center;vertical-align:top;width:100%}
 .profile__person{padding-left:30px;padding-right:42px;position:relative}@media screen and (max-width:680px){.profile__person{padding-left:15px;padding-right:35px}}@media screen and (max-width:400px){.profile__person{padding-right:20px}}
 .profile__name{display:block;font-size:42px;font-weight:500;line-height:1.14;margin:0;max-width:300px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:560px){.profile__name{font-size:34px;line-height:33px;text-align:center}}@media screen and (max-width:400px){.profile__name{font-size:27px;max-width:200px}}
 .profile__job{display:block;font-size:18px;font-weight:400;line-height:1.2;margin:7px 0 0;max-width:300px;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}@media screen and (max-width:560px){.profile__job{text-align:center}}@media screen and (max-width:400px){.profile__job{font-size:14px;line-height:17px;max-width:200px}}
@@ -21,7 +21,7 @@
 .gallery__content{cursor:pointer;padding-top:100%;position:relative;width:100%}
 .gallery__trash{background-color:transparent;background-image:url(161265c632b9f887063c.svg);background-position:50%;background-repeat:no-repeat;background-size:contain;border:none;cursor:pointer;height:19px;padding:0;position:absolute;right:20px;top:20px;width:18px;z-index:10}
 .gallery__image{aspect-ratio:1/1;height:100%;max-width:100%;-o-object-fit:cover;object-fit:cover;-o-object-position:center;object-position:center;position:absolute;top:0;vertical-align:top}
-.gallery__info{align-items:center;background-color:var(--white-color);display:flex;gap:20px;justify-content:space-between;padding:25px 20px}
+.gallery__info{align-items:center;background-color:var(--white-color);display:flex;gap:20px;justify-content:space-between;padding:18px 20px}
 .gallery__name{color:var(--black-color);font-size:24px;font-weight:900;line-height:29px;margin:0;overflow:hidden;text-overflow:ellipsis;white-space:nowrap}
 .gallery__like{background-color:transparent;background-image:url(f9cbbc232f4ed178be38.svg);background-position:50%;background-repeat:no-repeat;background-size:contain;border:none;cursor:pointer;flex-shrink:0;height:19px;padding:0;width:22px}
 .gallery__like_active{background-image:url(d750ae7834bd9bfe5181.svg)}
@@ -43,4 +43,4 @@
 .popup__img{height:100%;max-height:75vh;max-width:75vw;-o-object-fit:cover;object-fit:cover;-o-object-position:top;object-position:top;width:100%}
 .popup__caption{color:var(--white-color);font-size:12px;font-weight:400;line-height:15px;padding-top:10px}
 .popup_picture{background-color:rgba(0,0,0,.9)}
-
+.gallery__button{text-align:center}.gallery__counter{color:var(--black-color);display:block;font-size:13px;font-weight:400;line-height:16px;margin:0;padding:0}.profile__avatar{border-radius:50%;height:120px;overflow:hidden;position:relative;width:120px}.profile__avatar:after{background-image:url(a086f758840ae814ecde.svg);background-position:50%;background-repeat:no-repeat;background-size:26px 26px;content:"";display:block;height:26px;left:50%;opacity:0;position:absolute;top:50%;transform:translate(-50%,-50%);transition:opacity .3s linear;width:26px}.profile__avatar:hover{cursor:pointer}.profile__avatar:hover:after{opacity:1}
